--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="profile">
-            <img src="profile.jpg" alt="Aditya Pratama">
+            <img src="profile.jpg" alt="Suresh R">
             <h1>Suresh R</h1>
             <p>DevOps | SRE | Cloud Engineer</p>
             <p><a href="mailto:rsuresh8525@gmail.com">rsuresh8525@gmail.com</a></p>
@@ -20,10 +20,10 @@
 
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#https://suresh8525.github.io/portfolio/">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <a href="https://www.facebook.com/share/1E6hiofEnQ/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/suresh_r07?igsh=MTJyeDB1bGsycXNxdQ==" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/r-suresh-10038426b" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Suresh8525" target="_blank"><i class="fab fa-github"></i></a>
         </ul>
     </nav>
 
